--- a/blogs/templates/blogs.html
+++ b/blogs/templates/blogs.html
@@ -9,7 +9,7 @@
 
 {% block body %}
 <section class='story'>
-    <div class="align-center section-heading">
+    <div class="align-center1 section-heading">
         <img src="{% static 'pages_static/images/section-heading-decor.png'%}" alt="" />
         <h2>Blogs</h2>
         <img class="flip-horizontal" src="{% static 'pages_static/images/section-heading-decor.png'%}" alt="" />
