--- a/orders/templates/payment/order_verify_details.html
+++ b/orders/templates/payment/order_verify_details.html
@@ -81,7 +81,7 @@ Payment Gateway
     </div>
     <div class="details pb-5">
         <div class="signIn mt-1">
-            <a class="link-danger" href="#">add address </a>
+            <a class="link-danger" href="{%url 'add_address'%}">add address </a>
         </div>
     </div>
 </div>
