--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -25,6 +25,7 @@
                 <a class="nav-item" href="{% url 'collections' %}">Collection</a>
             </div>
             <div class='middle'>
+                <img src="static/pages_static/images/index/crown.png" alt="" style="width: 150px;">
                 <h2>PANAYA</h2>
                 <p>The Heritage Collection</p>
             </div>
@@ -56,6 +57,7 @@
             </div>
         </nav>
         <nav class="mob_view">
+            <img src="static/pages_static/images/index/crown.png" alt="" style="width: 90px;">
             <p class="panaya text-center">PANAYA</p>
             <p class="panaya_d">The Heritage Collection</p>
             <div class="hamburger" style="position: absolute;">
@@ -122,7 +124,7 @@
                 <div class="col-sm-3 mt-5">
                     <div class='align-center'>
                         <h3>Here to Help</h3>
-                        <div>
+                        <div style="word-break: break-all;">
                             Email: banaras@panaya.com <br>
                             Call us: +91 987654321
                         </div>
