--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -64,7 +64,7 @@
             alt=""
           />
         </div>
-        <div class="container" style="text-align: -webkit-center;">
+        <div class="container" style="text-align: -webkit-center;" class="explore-banaras">
           <div class="row">
             <div class="col-sm-4 mt-5 text-center">
               <div class="overlay-container">
@@ -73,7 +73,7 @@
                   src="{%static 'pages_static/images/index/Rectangle 55.png' %}"
                   alt=""
                 />
-                <h4 class="overlay-text m-4 text-white">Banarasi Silk Saree</h4>
+                <h4 class="overlay-text e_name m-4 text-white">Banarasi Silk Saree</h4>
               </div>
             </div>
             <div class="col-sm-4 mt-5 text-center">
@@ -83,7 +83,7 @@
                   src="{%static 'pages_static/images/index/Rectangle 56.png' %}"
                   alt=""
                 />
-                <h4 class="overlay-text m-4 text-white">Jangla Saree</h4>
+                <h4 class="overlay-text e_name m-4 text-white">Jangla Saree</h4>
               </div>
             </div>
             <div class="col-sm-4 mt-5 text-center">
@@ -93,7 +93,7 @@
                   src="{%static 'pages_static/images/index/Rectangle 60.png' %}"
                   alt=""
                 />
-                <h4 class="overlay-text m-4 text-white">Tanchoi Saree</h4>
+                <h4 class="overlay-text e_name m-4 text-white">Tanchoi Saree</h4>
               </div>
             </div>
             
@@ -104,7 +104,7 @@
                   src="{%static 'pages_static/images/index/Rectangle 61.png' %}"
                   alt=""
                 />
-                <h4 class="overlay-text m-4 text-white">Cutwork Saree</h4>
+                <h4 class="overlay-text e_name m-4 text-white">Real Zari Saree</h4>
               </div>
             </div>
             <div class="col-sm-4 mt-5 text-center">
@@ -114,7 +114,7 @@
                   src="{%static 'pages_static/images/index/Rectangle 62.png' %}"
                   alt=""
                 />
-                <h4 class="overlay-text m-4 text-white">Jamdani Saree</h4>
+                <h4 class="overlay-text e_name m-4 text-white">Jamdani Saree</h4>
               </div>
             </div>
             <div class="col-sm-4 mt-5 text-center">
@@ -124,7 +124,39 @@
                   src="{%static 'pages_static/images/index/Rectangle 63.png' %}"
                   alt=""
                 />
-                <h4 class="overlay-text m-4 text-white">Tissue Saree</h4>
+                <h4 class="overlay-text e_name m-4 text-white">Tissue Saree</h4>
+              </div>
+            </div>
+
+
+            <div class="col-sm-4 mt-5 text-center">
+              <div class="overlay-container">
+                <img
+                  class="img-fluid"
+                  src="{%static 'pages_static/images/index/Rectangle 61.png' %}"
+                  alt=""
+                />
+                <h4 class="overlay-text e_name m-4 text-white">Real Zari Saree</h4>
+              </div>
+            </div>
+            <div class="col-sm-4 mt-5 text-center">
+              <div class="overlay-container">
+                <img
+                  class="img-fluid"
+                  src="{%static 'pages_static/images/index/Rectangle 62.png' %}"
+                  alt=""
+                />
+                <h4 class="overlay-text e_name m-4 text-white">Jamdani Saree</h4>
+              </div>
+            </div>
+            <div class="col-sm-4 mt-5 text-center">
+              <div class="overlay-container">
+                <img
+                  class="img-fluid"
+                  src="{%static 'pages_static/images/index/Rectangle 63.png' %}"
+                  alt=""
+                />
+                <h4 class="overlay-text e_name m-4 text-white">Tissue Saree</h4>
               </div>
             </div>
           </div>
@@ -142,7 +174,7 @@
           />
         </div>
         <div class="container-lg">
-          <h1 style="color: rgba(141, 0, 32, 1)" class="text-center my-2">
+          <h1 style="color: rgba(141, 0, 32, 1)" class="text-center mt-3 mb-5">
             Exclusive New Collection for festival and bride look and off upto
             20%
           </h1>
@@ -154,7 +186,7 @@
                 alt=""
               />
               <h2 class="mt-5 text-sp-red">Banarasi Silk Saree</h2>
-              {% comment %} <p>view all</p> {% endcomment %}
+              <p>view all</p>
               <a class="btn styled-btn-filled" href="{% url 'product_list' %}">Shop Now</a>
             </div>
             <div class="col text-center">
@@ -164,7 +196,7 @@
                 alt=""
               />
               <h2 class="mt-5 text-sp-red">Jangla Saree</h2>
-              {% comment %} <p>view all</p> {% endcomment %}
+              <p>view all</p>
               <a class="btn styled-btn-filled" href="{% url 'product_list' %}">Shop Now</a>
             </div>
             <div class="col text-center">
@@ -174,8 +206,36 @@
                 alt=""
               />
               <h2 class="mt-5 text-sp-red">Jamdani Saree</h2>
-              {% comment %} <p>view all</p> {% endcomment %}
+              <p>view all</p>
               <a class="btn styled-btn-filled" href="{% url 'product_list' %}">Shop Now</a>
+            </div>
+          </div>
+          <div class="row g-2 g-md-5 row-cols-1 row-cols-md-3 mt-5">
+            <div class="col text-center">
+              <img
+                class="img-fluid"
+                src="{%static 'pages_static/images/index/Rectangle 406.png' %}"
+                alt=""
+              />
+              <h2 class="mt-5 text-sp-red">Banarasi Silk Saree</h2>
+            </div>
+
+            <div class="col text-center">
+              <img
+                class="img-fluid"
+                src="{%static 'pages_static/images/index/Rectangle 407.png' %}"
+                alt=""
+              />
+              <h2 class="mt-5 text-sp-red">Dupattas</h2>
+            </div>
+
+            <div class="col text-center">
+              <img
+                class="img-fluid"
+                src="{%static 'pages_static/images/index/Rectangle 408.png' %}"
+                alt=""
+              />
+              <h2 class="mt-5 text-sp-red">Broked Saree</h2>
             </div>
           </div>
         </div>
@@ -184,7 +244,7 @@
       <section id="heirlooms" class="my-5 mx-auto">
         <div class="container-md">
           <h1 class="text-center mb-5 text-sp-red">WOVEN HEIRLOOMS</h1>
-          <p>
+          <p class="mb-5">
             Panaya GOLD is a luxury handmade textile brand, started in 2015.
             Since its inception, it has been committed to preserving and
             innovating with the highest levels of artistry and hand
@@ -196,15 +256,15 @@
             simultaneously, comfort for today’s wearer.
           </p>
           <div class="container-fluid">
-            <div class="row g-2 row-cols-2 justify-content-center">
-              <div class="col-auto">
+            <div class="row container g-2 justify-content-center">
+              <div class="col-sm-6">
                 <img
                   class="img-fluid"
                   src="{%static 'pages_static/images/index/Rectangle 72.png' %}"
                   alt=""
                 />
               </div>
-              <div class="col-auto">
+              <div class="col-sm-6 align-self-center">
                 <!-- <div class="row"> -->
                 <img
                   style="display: block"
@@ -228,7 +288,7 @@
       </section>
       
       <section class="text-center my-5">
-        <h1 class="mb-5">"Handwoven stories written in eternal Banaras"</h1>
+        <h1 class="mb-5" style="font-family: Homerun;">"Handwoven stories written in eternal Banaras"</h1>
         <p class="">
           Each Panaya product has been made by the hands of a dedicated,
           trained artisan, with skills passed down through generations.
@@ -266,7 +326,7 @@
                 <label for="name">Name</label>
               </div>
               <div class="col-6">
-                <input type="text" id='contact-name' name="name">
+                <input type="text" style="width: -webkit-fill-available;" id='contact-name' name="name">
               </div>
             </div>
             <div class="row mt-5">
@@ -274,7 +334,7 @@
                 <label for="name">Email</label>
               </div>
               <div class="col-6">
-                <input type="text" id='contact-email' name="email">
+                <input type="text" style="width: -webkit-fill-available;" id='contact-email' name="email">
               </div>
             </div>
             <div class="row mt-5">
@@ -357,6 +417,69 @@
                   <p class="card-text">
                     Korvai Kanjivaram Sarees in brilliant colour Combinations and designs What is a Korvai Kanjivaram...Continue Reading
                   </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="section-heading">
+          <img src="{%static 'pages_static/images/section-heading-decor.png' %}" alt="" />
+          <h1>Instagram</h1>
+          <img
+            class="flip-horizontal"
+            src="{%static 'pages_static/images/section-heading-decor.png' %}"
+            alt=""
+          />
+        </div>
+        <h3 class="text-center mt-3 text-sp-red" style="font-family: Analogue;font-style: normal;font-weight: normal;">Instagram @panaya</h3>
+        <div class="container">
+          <div class="text-center story">Story</div>
+          <div class="mt-1 story_div">
+            <button class="story_btn"><img class="story_img" src="{%static 'pages_static/images/index/Rectangle 70.png' %}" alt=""></button>
+            <button class="story_btn"><img class="story_img" src="{%static 'pages_static/images/index/Rectangle 63.png' %}" alt=""></button>
+          </div>
+          <div class="mt-5">
+            <div class="owl-carousel owl-theme">
+              <div class="item">
+                <div class="card">
+                  <img class="hov1"
+                    src="{%static 'pages_static/images/index/Rectangle 402.png' %}"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="hover_part1"></div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="card">
+                  <img class="hov2"
+                    src="{%static 'pages_static/images/index/Rectangle 403.png' %}"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="hover_part2"></div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="card">
+                  <img class="hov3"
+                    src="{%static 'pages_static/images/index/Rectangle 404.png' %}"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="hover_part3"></div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="card">
+                  <img class="hov4"
+                    src="{%static 'pages_static/images/index/Rectangle 405.png' %}"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="hover_part4"></div>
                 </div>
               </div>
             </div>
