--- a/user_manager/templates/user_manager/forgot_password.html
+++ b/user_manager/templates/user_manager/forgot_password.html
@@ -18,7 +18,7 @@ Forgot password
         <div class="form-group">
             <h2 style="font-size:30px; margin: 2%;">Please enter your E-mail address.</h2>
         </div>
-        <input type="text" class='entry' name="email" id="email" class="form-control" placeholder="Email">
+        <input type="text" class='entry' name="email" id="email" class="form-control" placeholder="Enter your Email" required>
         <button type="submit" class="continue">Continue</button>
     </form>
 </div>
