--- a/blogs/templates/blog_post.html
+++ b/blogs/templates/blog_post.html
@@ -9,7 +9,7 @@
 
 {% block body %}
 <section class='story'>
-    <div class="align-center section-heading">
+    <div class="align-center1 section-heading">
         <img src="{% static 'pages_static/images/section-heading-decor.png'%}" alt="" />
         <h2>Blogs</h2>
         <img class="flip-horizontal" src="{% static 'pages_static/images/section-heading-decor.png'%}" alt="" />
@@ -18,8 +18,8 @@
 
 <section id='post' class='story container-md mx-auto'>
     <div class='row'>
-        <h1 class='col-12 align-center'>{{blog.title}}</h1>
-        <h5 class='col-12 text-muted align-center'>{{blog.author|upper}} . {{blog.date|timesince}} ago</h5>
+        <h1 class='col-12 align-center1'>{{blog.title}}</h1>
+        <h5 class='col-12 text-muted align-center1'>{{blog.author|upper}} . {{blog.date|timesince}} ago</h5>
         <div class='text col-12' id='blog-text'>
             {{blog.content|safe}}
         </div>
