--- a/pages_static/templates/pages_static/about.html
+++ b/pages_static/templates/pages_static/about.html
@@ -16,7 +16,7 @@
         <div class='container' id='about-us'>
             <div class='row justify-content-md-center'>
                 <div class='col-lg-6'>
-                    <div class='align-center'>
+                    <div class='align-center1'>
                         <h2>About us</h2>
                     </div>
                     <div class='text'>
@@ -61,7 +61,7 @@
     <section class='section-2-4'>
         <div class='container'>
             <div>
-                <div class='align-center'>
+                <div class='align-center1'>
                     <h2>What is so special about Banarasi Sarees?</h2>
                 </div>
                 <div class='text'>
@@ -91,7 +91,7 @@
     <section class='section-1-3'>
         <div class='container'>
             <div>
-                <div class='align-center'>
+                <div class='align-center1'>
                     <h1>How do we make Banarasi Sarees for you?</h1>
                 </div>
                 <div class='text'>
@@ -101,7 +101,7 @@
                     </p>
                 </div>
                 <div>
-                    <div class='align-center'>
+                    <div class='align-center1'>
                         <h2>Waving Process</h2>
                     </div>
                     <div class='row'>
