--- a/user_manager/static/user_manager/css/style.css
+++ b/user_manager/static/user_manager/css/style.css
@@ -9,7 +9,7 @@ body{
     
 }
 .container{
-    padding-top: 15%;
+    padding-top: 30%;
     padding-left: 10%;
     font-size: 40px;
     color: #fff;
@@ -40,7 +40,7 @@ body{
     background: #fff;
     padding: 20px;
     margin: 5% 4% 5% 3%;
-   
+    text-align: center;
     float: right;
     padding-bottom: 1%;
     border-radius: 5px;
