--- a/user_manager/templates/user_manager/password_change_form.html
+++ b/user_manager/templates/user_manager/password_change_form.html
@@ -15,12 +15,12 @@
     <p>Use the form below to change your password.</p>
     <form method="post">
         <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class='entry' name="password" id="password" class="form-control" placeholder="Password">
+            
+            <input type="password" class='entry' name="password" id="password" class="form-control" placeholder="Enter your New Password" required>
         </div>
         <div class='form-group'>
-            <label for="password2">Again Password</label>
-            <input type="password" class='entry' name="password2" id="password2" class="form-control" placeholder="Again Password">
+            
+            <input type="password" class='entry' name="password2" id="password2" class="form-control" placeholder="Again enter your New Password" required>
         </div>
         <button type="submit" class="continue">Submit</button>
     {% csrf_token %}
