--- a/user_manager/templates/user_manager/profile_add_address.html
+++ b/user_manager/templates/user_manager/profile_add_address.html
@@ -16,28 +16,28 @@ Add Address
         {% csrf_token %}
         <h1>Add Address</h1>
         <div class="form-group">
-            <label for="fname">First Name</label>
-            <input type="text" class='entry' name="fname" id="fname" class="form-control" placeholder="First Name">
+            
+            <input type="text" class='entry' name="fname" id="fname" class="form-control" placeholder="Enter your First Name" required >
         </div>
         <div class="form-group">
-            <label for="lname">Last Name</label>
-            <input type="text" class='entry' name="lname" id="lname" class="form-control" placeholder="Last Name">
+            
+            <input type="text" class='entry' name="lname" id="lname" class="form-control" placeholder="Enter your Last Name" required>
         </div>
         <div class="form-group">
-            <label for="address">Address</label>
-            <input type="text" class='entry' name="address" id="address" class="form-control" placeholder="Address">
+            
+            <input type="text" class='entry' name="address" id="address" class="form-control" placeholder="Enter your Address" required>
         </div>
         <div class="form-group">
-            <label for="city">City</label>
-            <input type="text" class='entry' name="city" id="city" class="form-control" placeholder="City">
+            
+            <input type="text" class='entry' name="city" id="city" class="form-control" placeholder="Enter your City" required>
         </div>
         <div class="form-group">
-            <label for="postalcode">Postal Code</label>
-            <input type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Postal Code">
+           
+            <input type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Enter your Postal Code" required>
         </div>
         <div class="form-group">
-            <label for="postalcode">Country</label>
-            <input type="text" class='entry' name="country" id="country" class="form-control" placeholder="country">
+            
+            <input type="text" class='entry' name="country" id="country" class="form-control" placeholder="Enter your Country" required>
         </div>
         <button type="submit" class="continue">Submit</button>
     </form>
