--- a/user_manager/templates/user_manager/profile_edit_address.html
+++ b/user_manager/templates/user_manager/profile_edit_address.html
@@ -17,28 +17,28 @@ Add Address
         <h1>Add Address</h1>
         <input value="{{ address.id }}" type="text" name='id' hidden>
         <div class="form-group">
-            <label for="fname">First Name</label>
-            <input type="text" class='entry' name="fname" id="fname" class="form-control" placeholder="First Name" value="{{ address.first_name }}">
+            
+            <input type="text" class='entry' name="fname" id="fname" class="form-control" placeholder="Enter your First Name" value="{{ address.first_name }}" required>
         </div>
         <div class="form-group">
-            <label for="lname">Last Name</label>
-            <input type="text" class='entry' name="lname" id="lname" class="form-control" placeholder="Last Name" value="{{ address.last_name }}">
+            
+            <input type="text" class='entry' name="lname" id="lname" class="form-control" placeholder="Enter your Last Name" value="{{ address.last_name }}" required>
         </div>
         <div class="form-group">
-            <label for="address">Address</label>
-            <input type="text" class='entry' name="address" id="address" class="form-control" placeholder="Address" value="{{ address.address }}">
+            
+            <input type="text" class='entry' name="address" id="address" class="form-control" placeholder="Enter your Address" value="{{ address.address }}" required>
         </div>
         <div class="form-group">
-            <label for="city">City</label>
-            <input type="text" class='entry' name="city" id="city" class="form-control" placeholder="City" value="{{ address.city }}">
+            
+            <input type="text" class='entry' name="city" id="city" class="form-control" placeholder="Enter your City" value="{{ address.city }}" required>
         </div>
         <div class="form-group">
-            <label for="postalcode">Postal Code</label>
-            <input type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Postal Code" value="{{ address.postal_code }}">
+            
+            <input type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Enter your Postal Code" value="{{ address.postal_code }}" required>
         </div>
         <div class="form-group">
-            <label for="postalcode">Country</label>
-            <input type="text" class='entry' name="country" id="country" class="form-control" placeholder="country">
+           
+            <input type="text" class='entry' name="country" id="country" class="form-control" placeholder="Enter your Country" required>
         </div>
         <button type="submit" class="continue">Submit</button>
     </form>
