--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -130,7 +130,7 @@
   </div>
 </section>
 
-<section id="recommendations" class="container-lg mt-5">
+<section id="recommendations" class="container-lg mt-5 mb-5">
   <h1 class="text-center text-sp-red my-4">You may also like</h1>
   <div class="row g-2 g-md-5 row-cols-1 row-cols-md-3">
     {% for product in related %}
@@ -146,7 +146,7 @@
 </section>
 <!-- POP UP -->
 <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
-  <div class="modal-dialog" style="margin: 1rem 1rem 1rem auto">
+  <div class="modal-dialog" style="margin: 0rem 0rem 0rem auto">
     <div class="modal-content">
       <div id="pop">
         <div style="float: right" data-bs-dismiss="modal" aria-label="Close">
