--- a/product/templates/product/list.html
+++ b/product/templates/product/list.html
@@ -170,6 +170,8 @@ Products
                 <h2 class="mt-2 fs-5">{{product.name}}</h2>
                 <p class="fs-5 fw-bold">Rs. {{product.price}}</p>
             </div>
+            {% empty %}
+            <div class="">no result</div>
             {% endfor %}
 
         </div>
